assets/css/style.css
*,
html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden;
  font-family: "Roboto", sans-serif;
  color: #eff0f1;
}
.background {
  position: relative;
  background-color: #9e9d9c;
  width: 100vw;
  height: 100vh;
  z-index: 10;
  /* background-color: rgb(107, 107, 107); */
  background-blend-mode: multiply;
  background-size: cover;
  background-repeat: no-repeat;
}

header {
  position: absolute;
  top: 0;
  width: 100vw;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
  font-size: 2rem;
  color: #eff0f1;
}
header p {
  text-align: right;
}
header a {
  text-decoration: none;
  color: #eff0f1;
}

section {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  padding: 1rem 5rem;
  width: 100vw;
  height: 100vh;
  text-align: center;
}

.quiz-images {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50%;
}
.quiz-content {
  color: #eff0f1;
  text-align: left;
}
.start h1 {
  text-align: left;
  font-size: 2rem;
}
.start p {
  line-height: 1.75rem;
  margin: 2rem 0;
}
.take-quiz-btn,
.submit-high-score {
  padding: 0.5rem 0;
  font-size: 1.5rem;
  font-weight: 600;
  color: #eff0f1;
  background-color: #685a60;
  border-radius: 10px;
  width: 100%;
}
.take-quiz-btn,
.submit-high-score:hover {
  cursor: pointer;
}

.quizForm input[type="radio"] {
  opacity: 0;
  position: fixed;
  width: 0;
}

.quizForm label {
  display: block;
  background-color: #685a60;
  color: #eff0f1;
  border-color: #685a60;
  /* background-color: #685a60;
  border: 2px solid #685a60; */
  border-radius: 10px;
  padding: 0.5rem 2rem;
  margin: 1rem 0;
  text-align: center;
}
.quizForm label:hover {
  cursor: pointer;
}

.quizForm input[type="radio"]:checked + label {
  background-color: #eff0f1;
  color: #685a60;
  border-color: #eff0f1;
}
.submit-answer-btn {
  background-color: #0c9c5b;
  border: 2px solid #0c9c5b;
  width: 100%;
  border-radius: 10px;
  padding: 0.75rem 0;
  margin-bottom: 1rem;
}
.submit-answer-btn:hover {
  cursor: pointer;
}

.end h2 {
  margin-bottom: 1rem;
}
.end p,
.end input,
.end button {
  margin: 1rem 0;
}
.end input {
  text-align: center;
  width: 100%;
  height: 2rem;
  box-sizing: border-box;
  padding: 1rem;
  color: black;
  /* font-size: 1.5rem; */
}
.end input[type="text"]:focus {
  /* background-color: lightblue; */
  outline: none;
  border: 2px solid #0c9c5b;
}

@media screen and (max-width: 750px) {
  header {
    font-size: 1rem;
  }
  section {
    padding: 0 1rem;
  }
  .quiz-images {
    height: 30%;
    align-items: end;
    margin-bottom: 1rem;
  }
  .quiz-images img {
    width: 150px;
  }
}
@media screen and (max-width: 350px) {
  .start p {
    line-height: 1.25rem;
    margin: 1rem 0;
  }
}

